crates/cli/tests/snapshots/activate_test__activate__export__includes_shared_env_if_no_tools-5.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

set -gx KEY value;
set -ge PROTO_VERSION;
set -gx _PROTO_ACTIVATED_ENV KEY;
set -gx _PROTO_ACTIVATED_PATH <WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin;
