crates/cli/tests/snapshots/activate_test__activate__export__includes_shared_env_if_no_tools-7.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

$ENV.KEY=value
unset PROTO_VERSION;
$ENV._PROTO_ACTIVATED_ENV=KEY
$ENV._PROTO_ACTIVATED_PATH='<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin'
