crates/cli/tests/snapshots/activate_test__activate__export__includes_shared_env_if_no_tools-8.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

$env.KEY = value
hide-env PROTO_VERSION
$env._PROTO_ACTIVATED_ENV = KEY
$env._PROTO_ACTIVATED_PATH = '<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin'
