crates/cli/tests/snapshots/activate_test__activate__export__includes_shared_env_if_no_tools-9.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
$env:KEY = 'value';
if (Test-Path "env:PROTO_VERSION") {
  Remove-Item -LiteralPath "env:PROTO_VERSION";
}
$env:_PROTO_ACTIVATED_ENV = 'KEY';
$env:_PROTO_ACTIVATED_PATH = '<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin';
