crates/cli/tests/snapshots/activate_test__activate__export__includes_shell_aliases_if_no_tools-10.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
if (Test-Path "env:PROTO_VERSION") {
  Remove-Item -LiteralPath "env:PROTO_VERSION";
}
$env:_PROTO_ACTIVATED_PATH = '<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin';
Set-Alias -Name '..' -Value 'cd ..';
Set-Alias -Name gs -Value 'git status';
$env:_PROTO_ACTIVATED_ALIASES = '..,gs';
