crates/cli/tests/snapshots/activate_test__activate__export__includes_shell_aliases_if_no_tools-13.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

unset PROTO_VERSION;
alias ..=$'cd ..';
alias gs=$'git status';
export _PROTO_ACTIVATED_ALIASES=..,gs;
export _PROTO_ACTIVATED_PATH=<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin;
